# Scipy_2024_TS

./: IMPROVEMENTS_SUMMARY.md  README.md  demo_model_comparison.ipynb  llmtime-energy-consumption.py  requirements.txt  timegpt-energy-consumption.py
results/: METRICS_SUMMARY.md  create_architecture_diagram.py  create_result_plots.py
src/: arima-energy-consumption.py  autogluon-timeseries-energy.py  tft-energy-consumption.py  timesfm-energy-consumption.py  xlstm-energy-consumption.py
ts_project/: pyproject.toml
