[tool.poetry]
name = "my_project"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.3.0"
numpy = "1.21.0"
matplotlib = "3.4.2"
statsmodels = "0.12.2"
pmdarima = "1.8.2"
scikit-learn = "0.24.2"
autogluon = {version = "0.3.1", extras = ["timeseries"]}
tensorflow = "2.9.0"
torch = "1.9.0"
pytorch_forecasting = "0.9.0"
pytorch_lightning = "1.4.0"
transformers = "4.9.2"
llmtime = "0.1.0"
nixtlats = "0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
